force-app/main/default/objects/Payor__c/Payor__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the List of Payers in elixir.</description>
    <label>Payor</label>
    <nameField>
        <label>Payor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>