force-app/main/default/objects/Payor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Represents the physical location of the payer entity.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>