force-app/main/default/objects/Payor__c/fields/Allowable_Detox__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Detox__c</fullName>
    <description>Denote the permissible reimbursement amounts for detoxification.</description>
    <label>Allowable Detox</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>