force-app/main/default/objects/Payor__c/fields/Allowable_IOP__c.field-meta.xml
<CustomField>
    <fullName>Allowable_IOP__c</fullName>
    <description>Denote the permissible reimbursement amount for intensive outpatient services.</description>
    <label>Allowable IOP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>