force-app/main/default/objects/Payor__c/fields/Allowable_IPR__c.field-meta.xml
<CustomField>
    <fullName>Allowable_IPR__c</fullName>
    <description>Denote the permissible reimbursement amount for inpatient rehabilitation services.</description>
    <label>Allowable IPR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>