force-app/main/default/objects/Payor__c/fields/Allowable_OP__c.field-meta.xml
<CustomField>
    <fullName>Allowable_OP__c</fullName>
    <description>Denote the permissible reimbursement amount for outpatient services.</description>
    <label>Allowable OP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>