force-app/main/default/objects/Payor__c/fields/Allowable_PHP__c.field-meta.xml
<CustomField>
    <fullName>Allowable_PHP__c</fullName>
    <description>Denote the permissible reimbursement amount for partial hospitalization services.</description>
    <label>Allowable PHP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>