force-app/main/default/objects/Payor__c/fields/Allowable_Residential__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Residential__c</fullName>
    <description>Denote the permissible reimbursement amount for residential services.</description>
    <label>Allowable Residential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>