force-app/main/default/objects/Payor__c/fields/Allowable_RTC__c.field-meta.xml
<CustomField>
    <fullName>Allowable_RTC__c</fullName>
    <description>Denote the permissible reimbursement amount for residential treatment center services.</description>
    <label>Allowable RTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>