force-app/main/default/objects/Payor__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Designates the city in which the payer is located.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>