force-app/main/default/objects/Payor__c/fields/Claim_Processing_via__c.field-meta.xml
<CustomField>
    <fullName>Claim_Processing_via__c</fullName>
    <description>Indicates the method through which claims are processed.</description>
    <label>Claim Processing via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clearing House</fullName>
                <default>true</default>
                <label>Clearing House</label>
            </value>
            <value>
                <fullName>837/835 EDI Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>