force-app/main/default/objects/Payor__c/fields/Payer_Code__c.field-meta.xml
<CustomField>
    <fullName>Payer_Code__c</fullName>
    <description>Represents a unique identifier for the payer.</description>
    <label>Payer Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>