force-app/main/default/objects/Payor__c/fields/PayerType__c.field-meta.xml
<CustomField>
    <fullName>PayerType__c</fullName>
    <description>Categorizes the type of payer entity.</description>
    <label>Payer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>