force-app/main/default/objects/Payor__c/fields/Payor_ID__c.field-meta.xml
<CustomField>
    <fullName>Payor_ID__c</fullName>
    <label>Payor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>