force-app/main/default/objects/Payor__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Provides contact information of payer.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>