force-app/main/default/objects/Payor__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the medical procedure associated with the claim.</description>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Payor</relationshipLabel>
    <relationshipName>Payor</relationshipName>
    <type>Lookup</type>
</CustomField>