force-app/main/default/objects/Payor__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Designates the state in which the payer is located.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>