force-app/main/default/objects/Payor__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Represents the postal code of the payer&apos;s address.</description>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>