force-app/main/default/objects/Payor__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Represents the postal code of the payer&apos;s address.</description>
    <label>Zipcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>